initial music project files

--- a/Discord SE Music Project/index.html
+++ b/Discord SE Music Project/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BoomSounds | Music Streaming Platform</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Download Trending Music You've Never Heard Hefore</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,13 +19,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
-    />
   </head>
-  <body>
-    <div id="app" class="bg-color-light-bg"></div>
+  <body class="bg-color-light-bg">
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
